commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangeborderupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangeborderupdatedata.yml
@@ -15,7 +15,7 @@ items:
       - 'excel!Excel.Interfaces.RangeBorderUpdateData#weight:member'
   - uid: 'excel!Excel.Interfaces.RangeBorderUpdateData#color:member'
     summary: |-
-      代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
@@ -45,7 +45,7 @@ items:
           - 'excel!Excel.Interfaces.RangeBorderUpdateData#style~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeBorderUpdateData#tintAndShade:member'
     summary: |-
-      返回或设置一个使区域边框的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。 空值表示边框没有统一的 tintAndShade 设置。
+      指定将区域边框的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 空值表示边框没有统一的 tintAndShade 设置。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
