--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.nameditemcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.nameditemcollectionloadoptions.yml
@@ -52,7 +52,7 @@ items:
           - 'excel!Excel.Interfaces.NamedItemArrayValuesLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#comment:member'
     summary: |-
-      对于集合中的每一项：代表与此名称关联的注释。
+      对于集合中的每一项：指定与此名称关联的注释。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comment
@@ -67,7 +67,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#formula:member'
     summary: |-
-      对于集合中的每一项：获取或设置已命名项的公式。 公式始终以等号 (=) 开头。
+      对于集合中的每一项：已命名项的公式。 公式始终以等号 (=) 开头。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formula
@@ -82,7 +82,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#name:member'
     summary: |-
-      对于集合中的每一项：对象的名称。 只读。
+      对于集合中的每一项：对象的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -97,7 +97,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#scope:member'
     summary: |-
-      对于集合中的每一项：指示名称是限定在工作簿中还是特定工作表。 可能的值为：工作表、工作簿。 只读。
+      对于集合中的每一项：指定名称是限定在工作簿中还是指定的工作表。 可能的值为：工作表、工作簿。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: scope
@@ -112,7 +112,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#type:member'
     summary: |-
-      对于集合中的每一项：指示由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。 只读。
+      对于集合中的每一项：指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
       \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -127,7 +127,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#value:member'
     summary: |-
-      对于集合中的每一项：代表由名称的公式计算的值。 对于已命名区域，将返回区域地址。 只读。
+      对于集合中的每一项：代表由名称的公式计算的值。 对于已命名区域，将返回区域地址。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
@@ -142,7 +142,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#visible:member'
     summary: |-
-      对于集合中的每一项：指定对象是否可见。
+      对于集合中的每一项：指定该对象是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
