--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.nameditemloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.nameditemloadoptions.yml
@@ -52,7 +52,7 @@ items:
           - 'excel!Excel.Interfaces.NamedItemArrayValuesLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#comment:member'
     summary: |-
-      表示与此名称相关联的注释。
+      指定与此名称关联的注释。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comment
@@ -67,7 +67,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#formula:member'
     summary: |-
-      获取或设置的已命名项目的公式。 公式始终以等号 (=) 开头。
+      已命名项的公式。 公式始终以等号 (=) 开头。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formula
@@ -82,7 +82,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#name:member'
     summary: |-
-      对象的名称。 只读。
+      对象的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -97,7 +97,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#scope:member'
     summary: |-
-      指明是否将 name 限定到工作簿或特定工作表。 可能的值为：工作表、工作簿。 只读。
+      指定名称的范围是工作簿还是特定工作表。 可能的值为：工作表、工作簿。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: scope
@@ -112,7 +112,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#type:member'
     summary: |-
-      指明 name 公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。 只读。
+      指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
       \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -127,7 +127,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#value:member'
     summary: |-
-      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。 只读。
+      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
