--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottableupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottableupdatedata.yml
@@ -31,7 +31,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableUpdateData#enableDataValueEditing:member'
     summary: |-
-      指定数据透视表是否允许用户编辑数据体中的值。
+      指定数据透视表是否允许用户对数据正文中的值进行编辑。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enableDataValueEditing
@@ -61,7 +61,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.PivotTableUpdateData#useCustomSortLists:member'
     summary: |-
-      指定排序时，数据透视表是否使用自定义列表。
+      指定在排序时数据透视表是否使用自定义列表。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useCustomSortLists
