--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.charttrendlinelabeldata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.charttrendlinelabeldata.yml
@@ -23,7 +23,7 @@ items:
       - 'excel!Excel.Interfaces.ChartTrendlineLabelData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelData#autoText:member'
     summary: |-
-      该布尔值表示趋势线标签是否根据上下文自动生成相应的文本。
+      指定趋势线标签是否根据上下文自动生成相应的文本。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoText
@@ -38,7 +38,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelData#format:member'
     summary: |-
-      表示图表趋势线标签的格式。
+      图表趋势线标签的格式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -68,7 +68,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelData#height:member'
     summary: |-
-      返回图表趋势线标签的高度，以磅为单位。 只读。 如果图表趋势线标签不可见，则为 Null。
+      返回图表趋势线标签的高度，以磅为单位。 如果图表趋势线标签不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -188,7 +188,7 @@ items:
           - 'excel!Excel.Interfaces.ChartTrendlineLabelData#verticalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelData#width:member'
     summary: |-
-      返回图表趋势线标签的宽度，以磅为单位。 只读。 如果图表趋势线标签不可见，则为 Null。
+      返回图表趋势线标签的宽度，以磅为单位。 如果图表趋势线标签不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
