--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.custompropertydata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.custompropertydata.yml
@@ -14,7 +14,7 @@ items:
       - 'excel!Excel.Interfaces.CustomPropertyData#value:member'
   - uid: 'excel!Excel.Interfaces.CustomPropertyData#key:member'
     summary: |-
-      获取 customProperty 的键。 只读。
+      自定义属性的键。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: key
@@ -29,7 +29,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.CustomPropertyData#type:member'
     summary: |-
-      获取自定义属性的值类型。 只读。
+      用于自定义属性的值的类型。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -44,7 +44,7 @@ items:
           - 'excel!Excel.Interfaces.CustomPropertyData#type~0:complex'
   - uid: 'excel!Excel.Interfaces.CustomPropertyData#value:member'
     summary: |-
-      获取或设置自定义属性的值。
+      自定义属性的值。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
