--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.customxmlpartcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.customxmlpartcollectionloadoptions.yml
@@ -29,7 +29,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomXmlPartCollectionLoadOptions#id:member'
     summary: |-
-      对于集合中的每一项：自定义 XML 部件的 ID。 只读。
+      对于集合中的每一项：自定义 XML 部件的 ID。
 
       \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -44,7 +44,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomXmlPartCollectionLoadOptions#namespaceUri:member'
     summary: |-
-      对于集合中的每一项：自定义 XML 部件的命名空间 URI。 只读。
+      对于集合中的每一项：自定义 XML 部件的命名空间 URI。
 
       \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: namespaceUri
