--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.nameditemupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.nameditemupdatedata.yml
@@ -14,7 +14,7 @@ items:
       - 'excel!Excel.Interfaces.NamedItemUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.NamedItemUpdateData#comment:member'
     summary: |-
-      表示与此名称相关联的注释。
+      指定与此名称关联的注释。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comment
@@ -29,7 +29,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.NamedItemUpdateData#formula:member'
     summary: |-
-      获取或设置的已命名项目的公式。 公式始终以等号 (=) 开头。
+      已命名项的公式。 公式始终以等号 (=) 开头。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formula
