--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartdatalabelsdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartdatalabelsdata.yml
@@ -26,7 +26,7 @@ items:
       - 'excel!Excel.Interfaces.ChartDataLabelsData#verticalAlignment:member'
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsData#autoText:member'
     summary: |-
-      表示数据标签是否根据上下文自动生成相应的文本。
+      指定数据标签是否根据上下文自动生成相应的文本。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoText
@@ -41,7 +41,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsData#format:member'
     summary: |-
-      表示图表数据标签的格式，包括填充和字体格式。 只读。
+      指定图表数据标签的格式，其中包括填充和字体格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -56,7 +56,7 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsData#horizontalAlignment:member'
     summary: |-
-      表示图表数据标签水平对齐。 有关详细信息，请参阅 ChartTextHorizontalAlignment。 仅当 TextOrientation 的数据标签为0时，此属性才有效。
+      指定图表数据标签的水平对齐方式。 有关详细信息，请参阅 ChartTextHorizontalAlignment。 仅当 TextOrientation 的数据标签为0时，此属性才有效。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
@@ -71,7 +71,7 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelsData#horizontalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsData#linkNumberFormat:member'
     summary: |-
-      表示数字格式是否链接到单元格。 如果为 true，则数字格式会在单元格中更改时在标签中更改。
+      指定数字格式是否链接到单元格。 如果为 true，则数字格式会在单元格中更改时在标签中更改。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: linkNumberFormat
@@ -86,7 +86,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsData#numberFormat:member'
     summary: |-
-      表示数据标签的格式代码。
+      指定数据标签的格式代码。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
@@ -131,7 +131,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsData#showBubbleSize:member'
     summary: |-
-      该布尔值表示数据标签气泡大小是否可见。
+      指定数据标签气泡大小是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showBubbleSize
@@ -146,7 +146,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsData#showCategoryName:member'
     summary: |-
-      表示数据标签分类名称是否可见的布尔值。
+      指定数据标签类别名称是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showCategoryName
@@ -161,7 +161,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsData#showLegendKey:member'
     summary: |-
-      该布尔值表示数据标签图例标示是否可见。
+      指定数据标签图例标示是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showLegendKey
@@ -176,7 +176,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsData#showPercentage:member'
     summary: |-
-      该布尔值表示数据标签百分比是否可见。
+      指定数据标签百分比是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showPercentage
@@ -191,7 +191,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsData#showSeriesName:member'
     summary: |-
-      该布尔值表示数据标签系列名称是否可见。
+      指定数据标签系列名称是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showSeriesName
@@ -206,7 +206,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsData#showValue:member'
     summary: |-
-      该布尔值表示数据标签值是否可见。
+      指定数据标签值是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showValue
