commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.nameditemcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.nameditemcollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="ebb98-101">属于工作簿或工作表的所有 NamedItem 对象的集合，具体取决于它的访问方式。</span><span class="sxs-lookup"><span data-stu-id="ebb98-101">A collection of all the NamedItem objects that are part of the workbook or worksheet, depending on how it was reached.</span></span>
+      属于工作簿或工作表的所有 NamedItem 对象的集合，具体取决于它的访问方式。
 
-      <span data-ttu-id="ebb98-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebb98-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.NamedItemCollectionLoadOptions
     fullName: Excel.Interfaces.NamedItemCollectionLoadOptions
     langs:
@@ -24,7 +24,7 @@ items:
       - 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#worksheet:member'
       - 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#worksheetOrNullObject:member'
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="ebb98-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="ebb98-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="ebb98-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="ebb98-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="ebb98-105">).</span><span class="sxs-lookup"><span data-stu-id="ebb98-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -37,9 +37,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#arrayValues:member'
     summary: |-
-      <span data-ttu-id="ebb98-106">对于集合中的每一项：返回一个对象，其中包含已命名项目的值和类型。</span><span class="sxs-lookup"><span data-stu-id="ebb98-106">For EACH ITEM in the collection: Returns an object containing values and types of the named item.</span></span>
+      对于集合中的每一项：返回一个对象，其中包含已命名项目的值和类型。
 
-      <span data-ttu-id="ebb98-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebb98-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: arrayValues
     fullName: arrayValues
     langs:
@@ -52,9 +52,9 @@ items:
           - 'excel!Excel.Interfaces.NamedItemArrayValuesLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#comment:member'
     summary: |-
-      <span data-ttu-id="ebb98-108">对于集合中的每一项：代表与此名称关联的注释。</span><span class="sxs-lookup"><span data-stu-id="ebb98-108">For EACH ITEM in the collection: Represents the comment associated with this name.</span></span>
+      对于集合中的每一项：指定与此名称关联的注释。
 
-      <span data-ttu-id="ebb98-109">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebb98-109">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comment
     fullName: comment
     langs:
@@ -67,9 +67,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#formula:member'
     summary: |-
-      <span data-ttu-id="ebb98-110">对于集合中的每一项：获取或设置已命名项的公式。</span><span class="sxs-lookup"><span data-stu-id="ebb98-110">For EACH ITEM in the collection: Gets or sets the formula of the named item.</span></span> <span data-ttu-id="ebb98-111">公式始终以等号 (=) 开头。</span><span class="sxs-lookup"><span data-stu-id="ebb98-111">Formula always starts with a '=' sign.</span></span>
+      对于集合中的每一项：已命名项的公式。 公式始终以等号 (=) 开头。
 
-      <span data-ttu-id="ebb98-112">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebb98-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formula
     fullName: formula
     langs:
@@ -82,9 +82,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="ebb98-113">对于集合中的每一项：对象的名称。</span><span class="sxs-lookup"><span data-stu-id="ebb98-113">For EACH ITEM in the collection: The name of the object.</span></span> <span data-ttu-id="ebb98-114">只读。</span><span class="sxs-lookup"><span data-stu-id="ebb98-114">Read-only.</span></span>
+      对于集合中的每一项：对象的名称。
 
-      <span data-ttu-id="ebb98-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebb98-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -97,9 +97,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#scope:member'
     summary: |-
-      <span data-ttu-id="ebb98-116">对于集合中的每一项：指示名称是限定在工作簿中还是特定工作表。</span><span class="sxs-lookup"><span data-stu-id="ebb98-116">For EACH ITEM in the collection: Indicates whether the name is scoped to the workbook or to a specific worksheet.</span></span> <span data-ttu-id="ebb98-117">可能的值为：工作表、工作簿。</span><span class="sxs-lookup"><span data-stu-id="ebb98-117">Possible values are: Worksheet, Workbook.</span></span> <span data-ttu-id="ebb98-118">只读。</span><span class="sxs-lookup"><span data-stu-id="ebb98-118">Read-only.</span></span>
+      对于集合中的每一项：指定名称是限定在工作簿中还是指定的工作表。 可能的值为：工作表、工作簿。
 
-      <span data-ttu-id="ebb98-119">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebb98-119">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: scope
     fullName: scope
     langs:
@@ -112,9 +112,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#type:member'
     summary: |-
-      <span data-ttu-id="ebb98-120">对于集合中的每一项：指示由名称的公式返回的值的类型。</span><span class="sxs-lookup"><span data-stu-id="ebb98-120">For EACH ITEM in the collection: Indicates the type of the value returned by the name's formula.</span></span> <span data-ttu-id="ebb98-121">有关详细信息，请参阅 NamedItemType。</span><span class="sxs-lookup"><span data-stu-id="ebb98-121">See Excel.NamedItemType for details.</span></span> <span data-ttu-id="ebb98-122">只读。</span><span class="sxs-lookup"><span data-stu-id="ebb98-122">Read-only.</span></span>
+      对于集合中的每一项：指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
-      <span data-ttu-id="ebb98-123">\[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebb98-123">\[ [API set: ExcelApi 1.1 for String,Integer,Double,Boolean,Range,Error; 1.7 for Array](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -127,9 +127,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#value:member'
     summary: |-
-      <span data-ttu-id="ebb98-124">对于集合中的每一项：代表由名称的公式计算的值。</span><span class="sxs-lookup"><span data-stu-id="ebb98-124">For EACH ITEM in the collection: Represents the value computed by the name's formula.</span></span> <span data-ttu-id="ebb98-125">对于已命名区域，将返回区域地址。</span><span class="sxs-lookup"><span data-stu-id="ebb98-125">For a named range, will return the range address.</span></span> <span data-ttu-id="ebb98-126">只读。</span><span class="sxs-lookup"><span data-stu-id="ebb98-126">Read-only.</span></span>
+      对于集合中的每一项：代表由名称的公式计算的值。 对于已命名区域，将返回区域地址。
 
-      <span data-ttu-id="ebb98-127">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebb98-127">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
@@ -142,9 +142,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="ebb98-128">对于集合中的每一项：指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="ebb98-128">For EACH ITEM in the collection: Specifies whether the object is visible or not.</span></span>
+      对于集合中的每一项：指定该对象是否可见。
 
-      <span data-ttu-id="ebb98-129">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebb98-129">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -157,9 +157,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#worksheet:member'
     summary: |-
-      <span data-ttu-id="ebb98-130">对于集合中的每一项：返回已命名项目的作用域所在的工作表。</span><span class="sxs-lookup"><span data-stu-id="ebb98-130">For EACH ITEM in the collection: Returns the worksheet on which the named item is scoped to.</span></span> <span data-ttu-id="ebb98-131">如果项目的作用域改为工作簿，则会引发错误。</span><span class="sxs-lookup"><span data-stu-id="ebb98-131">Throws an error if the item is scoped to the workbook instead.</span></span>
+      对于集合中的每一项：返回已命名项目的作用域所在的工作表。 如果项目的作用域改为工作簿，则会引发错误。
 
-      <span data-ttu-id="ebb98-132">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebb98-132">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
     fullName: worksheet
     langs:
@@ -172,9 +172,9 @@ items:
           - 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#worksheetOrNullObject:member'
     summary: |-
-      <span data-ttu-id="ebb98-133">对于集合中的每一项：返回已命名项目的作用域所在的工作表。</span><span class="sxs-lookup"><span data-stu-id="ebb98-133">For EACH ITEM in the collection: Returns the worksheet on which the named item is scoped to.</span></span> <span data-ttu-id="ebb98-134">如果项改为限定到工作簿，将返回 NULL 对象。</span><span class="sxs-lookup"><span data-stu-id="ebb98-134">Returns a null object if the item is scoped to the workbook instead.</span></span>
+      对于集合中的每一项：返回已命名项目的作用域所在的工作表。 如果项改为限定到工作簿，将返回 NULL 对象。
 
-      <span data-ttu-id="ebb98-135">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ebb98-135">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheetOrNullObject
     fullName: worksheetOrNullObject
     langs:
