--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangeborderupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangeborderupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeBorderUpdateData:interface'
-    summary: '<span data-ttu-id="259a6-101">一个用于更新 RangeBorder 对象上的数据的接口，可用于`rangeBorder.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="259a6-101">An interface for updating data on the RangeBorder object, for use in `rangeBorder.set({ ... })`</span></span><!-- --><span data-ttu-id="259a6-102">.</span><span class="sxs-lookup"><span data-stu-id="259a6-102"></span></span>'
+    summary: '一个用于更新 RangeBorder 对象上的数据的接口，可用于`rangeBorder.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.RangeBorderUpdateData
     fullName: Excel.Interfaces.RangeBorderUpdateData
     langs:
@@ -15,9 +15,9 @@ items:
       - 'excel!Excel.Interfaces.RangeBorderUpdateData#weight:member'
   - uid: 'excel!Excel.Interfaces.RangeBorderUpdateData#color:member'
     summary: |-
-      <span data-ttu-id="259a6-103">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="259a6-103">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。
 
-      <span data-ttu-id="259a6-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="259a6-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -30,9 +30,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeBorderUpdateData#style:member'
     summary: |-
-      <span data-ttu-id="259a6-105">线条样式的常量之一，指定边框的线条样式。</span><span class="sxs-lookup"><span data-stu-id="259a6-105">One of the constants of line style specifying the line style for the border.</span></span> <span data-ttu-id="259a6-106">有关详细信息，请参阅 BorderLineStyle。</span><span class="sxs-lookup"><span data-stu-id="259a6-106">See Excel.BorderLineStyle for details.</span></span>
+      线条样式的常量之一，指定边框的线条样式。 有关详细信息，请参阅 BorderLineStyle。
 
-      <span data-ttu-id="259a6-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="259a6-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
@@ -45,9 +45,9 @@ items:
           - 'excel!Excel.Interfaces.RangeBorderUpdateData#style~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeBorderUpdateData#tintAndShade:member'
     summary: |-
-      <span data-ttu-id="259a6-108">返回或设置一个使区域边框的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。</span><span class="sxs-lookup"><span data-stu-id="259a6-108">Returns or sets a double that lightens or darkens a color for Range Border, the value is between -1 (darkest) and 1 (brightest), with 0 for the original color.</span></span> <span data-ttu-id="259a6-109">空值表示边框没有统一的 tintAndShade 设置。</span><span class="sxs-lookup"><span data-stu-id="259a6-109">A null value indicates that the border doesn't have uniform tintAndShade setting.</span></span>
+      指定将区域边框的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 空值表示边框没有统一的 tintAndShade 设置。
 
-      <span data-ttu-id="259a6-110">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="259a6-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
     fullName: tintAndShade
     langs:
@@ -60,9 +60,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeBorderUpdateData#weight:member'
     summary: |-
-      <span data-ttu-id="259a6-111">指定区域周围的边框的粗细。</span><span class="sxs-lookup"><span data-stu-id="259a6-111">Specifies the weight of the border around a range.</span></span> <span data-ttu-id="259a6-112">有关详细信息，请参阅 BorderWeight。</span><span class="sxs-lookup"><span data-stu-id="259a6-112">See Excel.BorderWeight for details.</span></span>
+      指定区域周围的边框的粗细。 有关详细信息，请参阅 BorderWeight。
 
-      <span data-ttu-id="259a6-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="259a6-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: weight
     fullName: weight
     langs:
