--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.worksheetupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.worksheetupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData:interface'
-    summary: '<span data-ttu-id="05c85-101">一个用于更新工作表对象上的数据的接口，可用于`worksheet.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="05c85-101">An interface for updating data on the Worksheet object, for use in `worksheet.set({ ... })`</span></span><!-- --><span data-ttu-id="05c85-102">.</span><span class="sxs-lookup"><span data-stu-id="05c85-102"></span></span>'
+    summary: '一个用于更新工作表对象上的数据的接口，可用于`worksheet.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.WorksheetUpdateData
     fullName: Excel.Interfaces.WorksheetUpdateData
     langs:
@@ -16,9 +16,9 @@ items:
       - 'excel!Excel.Interfaces.WorksheetUpdateData#visibility:member'
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="05c85-103">工作表的显示名称。</span><span class="sxs-lookup"><span data-stu-id="05c85-103">The display name of the worksheet.</span></span>
+      工作表的显示名称。
 
-      <span data-ttu-id="05c85-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="05c85-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -31,9 +31,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData#position:member'
     summary: |-
-      <span data-ttu-id="05c85-105">工作表在工作簿中的位置，从零开始。</span><span class="sxs-lookup"><span data-stu-id="05c85-105">The zero-based position of the worksheet within the workbook.</span></span>
+      工作表在工作簿中的位置，从零开始。
 
-      <span data-ttu-id="05c85-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="05c85-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -46,9 +46,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData#standardWidth:member'
     summary: |-
-      <span data-ttu-id="05c85-107">返回或设置工作表中所有列的标准（默认）列宽。</span><span class="sxs-lookup"><span data-stu-id="05c85-107">Returns or sets the standard (default) width of all the columns in the worksheet.</span></span> <span data-ttu-id="05c85-108">一个列宽单位等于“常规”样式中一个字符的宽度。</span><span class="sxs-lookup"><span data-stu-id="05c85-108">One unit of column width is equal to the width of one character in the Normal style.</span></span> <span data-ttu-id="05c85-109">对于比例字体，则使用字符 0（零）的宽度。</span><span class="sxs-lookup"><span data-stu-id="05c85-109">For proportional fonts, the width of the character 0 (zero) is used.</span></span>
+      指定工作表中所有列的标准（默认）宽度。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
 
-      <span data-ttu-id="05c85-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="05c85-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: standardWidth
     fullName: standardWidth
     langs:
@@ -61,9 +61,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData#tabColor:member'
     summary: |-
-      <span data-ttu-id="05c85-111">获取或设置工作表标签颜色。</span><span class="sxs-lookup"><span data-stu-id="05c85-111">Gets or sets the worksheet tab color.</span></span> <span data-ttu-id="05c85-112">检索选项卡颜色时，如果工作表不可见，则值将为 null。</span><span class="sxs-lookup"><span data-stu-id="05c85-112">When retrieving the tab color, if the worksheet is invisible, the value will be null.</span></span> <span data-ttu-id="05c85-113">如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。</span><span class="sxs-lookup"><span data-stu-id="05c85-113">If the worksheet is visible but the tab color is set to auto, an empty string will be returned.</span></span> <span data-ttu-id="05c85-114">否则，在设置颜色时，属性将设置为颜色，格式为\#"123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。</span><span class="sxs-lookup"><span data-stu-id="05c85-114">Otherwise, the property will be set to a color, in the form "\#123456" When setting the color, use an empty-string to set an "auto" color, or a real color otherwise.</span></span>
+      工作表的选项卡颜色。 检索选项卡颜色时，如果工作表不可见，则值将为 null。 如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。 否则，在设置颜色时，属性将设置为颜色，格式为\#"123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。
 
-      <span data-ttu-id="05c85-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="05c85-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tabColor
     fullName: tabColor
     langs:
@@ -76,9 +76,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData#visibility:member'
     summary: |-
-      <span data-ttu-id="05c85-116">工作表的可见性。</span><span class="sxs-lookup"><span data-stu-id="05c85-116">The Visibility of the worksheet.</span></span>
+      工作表的可见性。
 
-      <span data-ttu-id="05c85-117">\[[API 集： ExcelApi 1.1 用于读取可见性; 1.2 用于设置。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span><span class="sxs-lookup"><span data-stu-id="05c85-117">\[ [API set: ExcelApi 1.1 for reading visibility; 1.2 for setting it.](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span></span> <span data-ttu-id="05c85-118">\]</span><span class="sxs-lookup"><span data-stu-id="05c85-118"></span></span>
+      \[[API 集： ExcelApi 1.1 用于读取可见性; 1.2 用于设置。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]
     name: visibility
     fullName: visibility
     langs:
