--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartlegendentrydata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartlegendentrydata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryData:interface'
-    summary: <span data-ttu-id="ff6d2-101">描述通过调用返回的数据的接口`chartLegendEntry.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="ff6d2-101">An interface describing the data returned by calling `chartLegendEntry.toJSON()`</span></span><!-- --><span data-ttu-id="ff6d2-102">.</span><span class="sxs-lookup"><span data-stu-id="ff6d2-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartLegendEntry.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartLegendEntryData
     fullName: Excel.Interfaces.ChartLegendEntryData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendEntryData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryData#height:member'
     summary: |-
-      <span data-ttu-id="ff6d2-103">表示图表图例上的 legendEntry 的高度。</span><span class="sxs-lookup"><span data-stu-id="ff6d2-103">Represents the height of the legendEntry on the chart legend.</span></span>
+      指定图表图例上的 legendEntry 的高度。
 
-      <span data-ttu-id="ff6d2-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ff6d2-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -32,9 +32,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryData#index:member'
     summary: |-
-      <span data-ttu-id="ff6d2-105">表示图表图例中的 legendEntry 的索引。</span><span class="sxs-lookup"><span data-stu-id="ff6d2-105">Represents the index of the legendEntry in the chart legend.</span></span>
+      指定图表图例中的 legendEntry 的索引。
 
-      <span data-ttu-id="ff6d2-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ff6d2-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
     fullName: index
     langs:
@@ -47,9 +47,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryData#left:member'
     summary: |-
-      <span data-ttu-id="ff6d2-107">表示图表 legendEntry 的左侧。</span><span class="sxs-lookup"><span data-stu-id="ff6d2-107">Represents the left of a chart legendEntry.</span></span>
+      指定图表 legendEntry 的左侧。
 
-      <span data-ttu-id="ff6d2-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ff6d2-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -62,9 +62,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryData#top:member'
     summary: |-
-      <span data-ttu-id="ff6d2-109">表示图表 legendEntry 的顶部。</span><span class="sxs-lookup"><span data-stu-id="ff6d2-109">Represents the top of a chart legendEntry.</span></span>
+      指定图表 legendEntry 的顶部。
 
-      <span data-ttu-id="ff6d2-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ff6d2-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -77,9 +77,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryData#visible:member'
     summary: |-
-      <span data-ttu-id="ff6d2-111">表示图表图例条目可见。</span><span class="sxs-lookup"><span data-stu-id="ff6d2-111">Represents the visible of a chart legend entry.</span></span>
+      表示图表图例条目可见。
 
-      <span data-ttu-id="ff6d2-112">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ff6d2-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -92,9 +92,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryData#width:member'
     summary: |-
-      <span data-ttu-id="ff6d2-113">表示图表图例上的 legendEntry 的宽度。</span><span class="sxs-lookup"><span data-stu-id="ff6d2-113">Represents the width of the legendEntry on the chart Legend.</span></span>
+      表示图表图例上的 legendEntry 的宽度。
 
-      <span data-ttu-id="ff6d2-114">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ff6d2-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
