--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartlegendformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartlegendformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatData:interface'
-    summary: <span data-ttu-id="f385b-101">描述通过调用返回的数据的接口`chartLegendFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="f385b-101">An interface describing the data returned by calling `chartLegendFormat.toJSON()`</span></span><!-- --><span data-ttu-id="f385b-102">.</span><span class="sxs-lookup"><span data-stu-id="f385b-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartLegendFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartLegendFormatData
     fullName: Excel.Interfaces.ChartLegendFormatData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendFormatData#font:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatData#border:member'
     summary: |-
-      <span data-ttu-id="f385b-103">表示边框格式，包括颜色、线条样式和粗细。</span><span class="sxs-lookup"><span data-stu-id="f385b-103">Represents the border format, which includes color, linestyle, and weight.</span></span> <span data-ttu-id="f385b-104">只读。</span><span class="sxs-lookup"><span data-stu-id="f385b-104">Read-only.</span></span>
+      表示边框格式，包括颜色、线条样式和粗细。
 
-      <span data-ttu-id="f385b-105">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f385b-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ChartBorderData:interface'
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatData#font:member'
     summary: |-
-      <span data-ttu-id="f385b-106">表示图表图例的字体属性，例如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="f385b-106">Represents the font attributes such as font name, font size, color, etc. of a chart legend.</span></span> <span data-ttu-id="f385b-107">只读。</span><span class="sxs-lookup"><span data-stu-id="f385b-107">Read-only.</span></span>
+      表示图表图例的字体属性，例如字体名称、字体大小、颜色等。
 
-      <span data-ttu-id="f385b-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f385b-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
