--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.customxmlpartcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.customxmlpartcollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.CustomXmlPartCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="2e611-101">自定义 XML 部件的集合。</span><span class="sxs-lookup"><span data-stu-id="2e611-101">A collection of custom XML parts.</span></span>
+      自定义 XML 部件的集合。
 
-      <span data-ttu-id="2e611-102">\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2e611-102">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.CustomXmlPartCollectionLoadOptions
     fullName: Excel.Interfaces.CustomXmlPartCollectionLoadOptions
     langs:
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.CustomXmlPartCollectionLoadOptions#id:member'
       - 'excel!Excel.Interfaces.CustomXmlPartCollectionLoadOptions#namespaceUri:member'
   - uid: 'excel!Excel.Interfaces.CustomXmlPartCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="2e611-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="2e611-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="2e611-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="2e611-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="2e611-105">).</span><span class="sxs-lookup"><span data-stu-id="2e611-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomXmlPartCollectionLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="2e611-106">对于集合中的每一项：自定义 XML 部件的 ID。</span><span class="sxs-lookup"><span data-stu-id="2e611-106">For EACH ITEM in the collection: The custom XML part's ID.</span></span> <span data-ttu-id="2e611-107">只读。</span><span class="sxs-lookup"><span data-stu-id="2e611-107">Read-only.</span></span>
+      对于集合中的每一项：自定义 XML 部件的 ID。
 
-      <span data-ttu-id="2e611-108">\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2e611-108">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -44,9 +44,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomXmlPartCollectionLoadOptions#namespaceUri:member'
     summary: |-
-      <span data-ttu-id="2e611-109">对于集合中的每一项：自定义 XML 部件的命名空间 URI。</span><span class="sxs-lookup"><span data-stu-id="2e611-109">For EACH ITEM in the collection: The custom XML part's namespace URI.</span></span> <span data-ttu-id="2e611-110">只读。</span><span class="sxs-lookup"><span data-stu-id="2e611-110">Read-only.</span></span>
+      对于集合中的每一项：自定义 XML 部件的命名空间 URI。
 
-      <span data-ttu-id="2e611-111">\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2e611-111">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: namespaceUri
     fullName: namespaceUri
     langs:
