--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.datapivothierarchyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.datapivothierarchyupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyUpdateData:interface'
-    summary: '<span data-ttu-id="926cd-101">一个用于更新 DataPivotHierarchy 对象上的数据的接口，可用于`dataPivotHierarchy.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="926cd-101">An interface for updating data on the DataPivotHierarchy object, for use in `dataPivotHierarchy.set({ ... })`</span></span><!-- --><span data-ttu-id="926cd-102">.</span><span class="sxs-lookup"><span data-stu-id="926cd-102"></span></span>'
+    summary: '一个用于更新 DataPivotHierarchy 对象上的数据的接口，可用于`dataPivotHierarchy.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.DataPivotHierarchyUpdateData
     fullName: Excel.Interfaces.DataPivotHierarchyUpdateData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.Interfaces.DataPivotHierarchyUpdateData#summarizeBy:member'
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyUpdateData#field:member'
     summary: |-
-      <span data-ttu-id="926cd-103">返回与 DataPivotHierarchy 相关联的 PivotFields。</span><span class="sxs-lookup"><span data-stu-id="926cd-103">Returns the PivotFields associated with the DataPivotHierarchy.</span></span>
+      返回与 DataPivotHierarchy 相关联的 PivotFields。
 
-      <span data-ttu-id="926cd-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="926cd-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: field
     fullName: field
     langs:
@@ -32,9 +32,9 @@ items:
           - 'excel!Excel.Interfaces.PivotFieldUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="926cd-105">DataPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="926cd-105">Name of the DataPivotHierarchy.</span></span>
+      DataPivotHierarchy 的名称。
 
-      <span data-ttu-id="926cd-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="926cd-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -47,9 +47,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyUpdateData#numberFormat:member'
     summary: |-
-      <span data-ttu-id="926cd-107">DataPivotHierarchy 的数字格式。</span><span class="sxs-lookup"><span data-stu-id="926cd-107">Number format of the DataPivotHierarchy.</span></span>
+      DataPivotHierarchy 的数字格式。
 
-      <span data-ttu-id="926cd-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="926cd-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
     fullName: numberFormat
     langs:
@@ -62,9 +62,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyUpdateData#position:member'
     summary: |-
-      <span data-ttu-id="926cd-109">DataPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="926cd-109">Position of the DataPivotHierarchy.</span></span>
+      DataPivotHierarchy 的位置。
 
-      <span data-ttu-id="926cd-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="926cd-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -77,9 +77,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyUpdateData#showAs:member'
     summary: |-
-      <span data-ttu-id="926cd-111">确定数据是否应显示为特定计算汇总。</span><span class="sxs-lookup"><span data-stu-id="926cd-111">Determines whether the data should be shown as a specific summary calculation or not.</span></span>
+      指定是否应将数据显示为特定的汇总计算。
 
-      <span data-ttu-id="926cd-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="926cd-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAs
     fullName: showAs
     langs:
@@ -92,9 +92,9 @@ items:
           - 'excel!Excel.ShowAsRule:interface'
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyUpdateData#summarizeBy:member'
     summary: |-
-      <span data-ttu-id="926cd-113">确定是否显示 DataPivotHierarchy 的所有项。</span><span class="sxs-lookup"><span data-stu-id="926cd-113">Determines whether to show all items of the DataPivotHierarchy.</span></span>
+      指定是否显示 DataPivotHierarchy 的所有项目。
 
-      <span data-ttu-id="926cd-114">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="926cd-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: summarizeBy
     fullName: summarizeBy
     langs:
