--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.nameditemupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.nameditemupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.NamedItemUpdateData:interface'
-    summary: '<span data-ttu-id="922d4-101">一个用于更新 NamedItem 对象上的数据的接口，可用于`namedItem.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="922d4-101">An interface for updating data on the NamedItem object, for use in `namedItem.set({ ... })`</span></span><!-- --><span data-ttu-id="922d4-102">.</span><span class="sxs-lookup"><span data-stu-id="922d4-102"></span></span>'
+    summary: '一个用于更新 NamedItem 对象上的数据的接口，可用于`namedItem.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.NamedItemUpdateData
     fullName: Excel.Interfaces.NamedItemUpdateData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.NamedItemUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.NamedItemUpdateData#comment:member'
     summary: |-
-      <span data-ttu-id="922d4-103">表示与此名称相关联的注释。</span><span class="sxs-lookup"><span data-stu-id="922d4-103">Represents the comment associated with this name.</span></span>
+      指定与此名称关联的注释。
 
-      <span data-ttu-id="922d4-104">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="922d4-104">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comment
     fullName: comment
     langs:
@@ -29,9 +29,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.NamedItemUpdateData#formula:member'
     summary: |-
-      <span data-ttu-id="922d4-105">获取或设置的已命名项目的公式。</span><span class="sxs-lookup"><span data-stu-id="922d4-105">Gets or sets the formula of the named item.</span></span> <span data-ttu-id="922d4-106">公式始终以等号 (=) 开头。</span><span class="sxs-lookup"><span data-stu-id="922d4-106">Formula always starts with a '=' sign.</span></span>
+      已命名项的公式。 公式始终以等号 (=) 开头。
 
-      <span data-ttu-id="922d4-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="922d4-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formula
     fullName: formula
     langs:
@@ -44,9 +44,9 @@ items:
           - any
   - uid: 'excel!Excel.Interfaces.NamedItemUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="922d4-108">指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="922d4-108">Specifies whether the object is visible or not.</span></span>
+      指定对象是否可见。
 
-      <span data-ttu-id="922d4-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="922d4-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
