commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.autofilterloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.autofilterloadoptions.yml
@@ -30,7 +30,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.AutoFilterLoadOptions#criteria:member'
     summary: |-
-      在自动筛选区域中保留所有筛选条件的数组。 只读。
+      在自动筛选区域中保留所有筛选条件的数组。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: criteria
@@ -45,7 +45,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.AutoFilterLoadOptions#enabled:member'
     summary: |-
-      指示是否启用了自动筛选。 只读。
+      指定是否启用自动筛选。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enabled
@@ -60,7 +60,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.AutoFilterLoadOptions#isDataFiltered:member'
     summary: |-
-      指示自动筛选是否具有筛选条件。 只读。
+      指定自动筛选是否具有筛选条件。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isDataFiltered
