--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.tableloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.tableloadoptions.yml
@@ -2,7 +2,7 @@
 items:
   - uid: 'excel!Excel.Interfaces.TableLoadOptions:interface'
     summary: |-
-      表示一个 Excel 表。 若要了解有关表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-tables)<!-- -->.
+      表示 Excel 表格。 若要了解有关表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-tables)<!-- -->.
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.TableLoadOptions
@@ -49,7 +49,7 @@ items:
           - 'excel!Excel.Interfaces.TableColumnCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.TableLoadOptions#id:member'
     summary: |-
-      返回用于唯一标识指定工作簿中表的值。即使表被重命名，标识符的值仍然相同。只读。
+      返回用于唯一标识指定工作簿中表的值。 即使表被重命名，标识符的值仍保持不变。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -96,7 +96,7 @@ items:
           - 'excel!Excel.Interfaces.TableRowCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.TableLoadOptions#showHeaders:member'
     summary: |-
-      指示标头行是否可见。 该值可以设置为显示或删除标头行。
+      指定标题行是否可见。 该值可以设置为显示或删除标头行。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showHeaders
@@ -111,7 +111,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableLoadOptions#showTotals:member'
     summary: |-
-      指示总计行是否可见。 该值可以设置为显示或删除总计行。
+      指定汇总行是否可见。 该值可以设置为显示或删除总计行。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showTotals
