--- a/docs/docs-ref-autogen/excel/excel/excel.comment.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.comment.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.Comment#authorEmail:member'
@@ -66,7 +66,7 @@ items:
           - string
   - uid: 'excel!Excel.Comment#content:member'
     summary: |-
-      获取或设置批注的内容。 字符串为纯文本。
+      批注的内容。 字符串为纯文本。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: content
@@ -181,7 +181,7 @@ items:
         description: ''
   - uid: 'excel!Excel.Comment#id:member'
     summary: |-
-      表示批注标识符。 只读。
+      指定注释标识符。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -273,9 +273,9 @@ items:
                       }
   - uid: 'excel!Excel.Comment#mentions:member'
     summary: |-
-      获取注释中提到的实体（如人员）。
+      获取注释中提到的实体（例如，人员）。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: mentions
     fullName: mentions
     langs:
@@ -288,7 +288,7 @@ items:
           - 'excel!Excel.Comment#mentions~0:complex'
   - uid: 'excel!Excel.Comment#replies:member'
     summary: |-
-      表示与批注关联的回复对象的集合。 只读。
+      表示与批注关联的回复对象的集合。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: replies
@@ -303,10 +303,9 @@ items:
           - 'excel!Excel.CommentReplyCollection:class'
   - uid: 'excel!Excel.Comment#resolved:member'
     summary: |-
-      获取或设置批注线程的状态。 值为 "true" 表示注释线程处于 "已解决" 状态。
+      注释线程状态。 值为 "true" 表示解析注释线程。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: resolved
     fullName: resolved
     langs:
@@ -323,7 +322,7 @@ items:
           #### <a name="examples"></a>示例
 
           ```typescript
-          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/85-preview-apis/comment-resolution.yaml
+          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/12-comment/comment-resolution.yaml
           await Excel.run(async (context) => {
               const sheet = context.workbook.worksheets.getItem("Comments");
               sheet.comments.getItemAt(0).resolved = true;
@@ -332,9 +331,9 @@ items:
           ```
   - uid: 'excel!Excel.Comment#richContent:member'
     summary: |-
-      获取丰富的注释内容（例如，注释中的提及）。 此字符串不应显示给最终用户。 您的外接程序应仅使用此信息分析丰富的注释内容。
+      获取丰富的注释内容（例如，注释中的提到）。 此字符串不应显示给最终用户。 您的外接程序应仅使用此信息分析丰富的注释内容。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: richContent
     fullName: richContent
     langs:
@@ -370,7 +369,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.Comment#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -406,7 +405,7 @@ items:
     summary: |-
       使用特殊格式的字符串和提及列表更新注释内容。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: updateMentions(contentWithMentions)
     fullName: updateMentions(contentWithMentions)
     langs:
@@ -424,7 +423,7 @@ items:
           type:
             - 'excel!Excel.CommentRichContent:interface'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.Comment#contentType~0:complex'
     name: Excel.ContentType | "Plain" | "Mention"
@@ -458,7 +457,7 @@ references:
     name: Excel.CommentReplyCollection
   - uid: 'excel!Excel.Interfaces.CommentUpdateData:interface'
     name: Interfaces.CommentUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.CommentData:interface'
     name: Excel.Interfaces.CommentData
