--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentloadoptions.yml
@@ -66,7 +66,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CommentLoadOptions#content:member'
     summary: |-
-      获取或设置批注的内容。 字符串为纯文本。
+      批注的内容。 字符串为纯文本。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: content
@@ -112,7 +112,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CommentLoadOptions#id:member'
     summary: |-
-      表示批注标识符。 只读。
+      指定注释标识符。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -127,9 +127,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CommentLoadOptions#mentions:member'
     summary: |-
-      获取注释中提到的实体（如人员）。
+      获取注释中提到的实体（例如，人员）。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: mentions
     fullName: mentions
     langs:
@@ -142,10 +142,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CommentLoadOptions#resolved:member'
     summary: |-
-      获取或设置批注线程的状态。 值为 "true" 表示注释线程处于 "已解决" 状态。
+      注释线程状态。 值为 "true" 表示解析注释线程。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: resolved
     fullName: resolved
     langs:
@@ -158,9 +157,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CommentLoadOptions#richContent:member'
     summary: |-
-      获取丰富的注释内容（例如，注释中的提及）。 此字符串不应显示给最终用户。 您的外接程序应仅使用此信息分析丰富的注释内容。
+      获取丰富的注释内容（例如，注释中的提到）。 此字符串不应显示给最终用户。 您的外接程序应仅使用此信息分析丰富的注释内容。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: richContent
     fullName: richContent
     langs:
