--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottabledata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottabledata.yml
@@ -67,7 +67,7 @@ items:
           - 'excel!Excel.Interfaces.PivotTableData#dataHierarchies~0:complex'
   - uid: 'excel!Excel.Interfaces.PivotTableData#enableDataValueEditing:member'
     summary: |-
-      指定数据透视表是否允许用户编辑数据体中的值。
+      指定数据透视表是否允许用户对数据正文中的值进行编辑。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enableDataValueEditing
@@ -112,7 +112,7 @@ items:
           - 'excel!Excel.Interfaces.PivotTableData#hierarchies~0:complex'
   - uid: 'excel!Excel.Interfaces.PivotTableData#id:member'
     summary: |-
-      数据透视表的 ID。 只读。
+      数据透视表的 ID。
 
       \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -157,7 +157,7 @@ items:
           - 'excel!Excel.Interfaces.PivotTableData#rowHierarchies~0:complex'
   - uid: 'excel!Excel.Interfaces.PivotTableData#useCustomSortLists:member'
     summary: |-
-      指定排序时，数据透视表是否使用自定义列表。
+      指定在排序时数据透视表是否使用自定义列表。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useCustomSortLists
