--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangefontupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangefontupdatedata.yml
@@ -36,7 +36,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#color:member'
     summary: |-
-      文本颜色的 HTML 颜色代码表示。 例如， \#FF0000 表示红色。
+      文本颜色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
@@ -51,7 +51,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#italic:member'
     summary: |-
-      表示字体的斜体状态。
+      指定字体的斜体状态。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: italic
@@ -66,7 +66,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#name:member'
     summary: |-
-      字体名称（例如"Calibri"）
+      字体名称（例如，"Calibri"）
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -96,7 +96,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#strikethrough:member'
     summary: |-
-      表示字体的删除线状态。 Null 值表示整个区域没有统一的删除线设置。
+      指定字体的删除线状态。 Null 值表示整个区域没有统一的删除线设置。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: strikethrough
@@ -111,7 +111,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#subscript:member'
     summary: |-
-      表示字体的下标状态。 如果区域中的所有字体均为下标，则返回 True。 如果区域的所有字体都是上标或 normal （既不是上标，也不是下标），则返回 False。 否则返回 Null。
+      指定字体的下标状态。 如果区域中的所有字体均为下标，则返回 True。 如果区域的所有字体都是上标或 normal （既不是上标，也不是下标），则返回 False。 否则返回 Null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: subscript
@@ -126,7 +126,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#superscript:member'
     summary: |-
-      表示字体的上标状态。 如果区域中的所有字体均为上标，则返回 True。 如果区域的所有字体为下标或普通（既不是上标，也不是下标），则返回 False。 否则返回 Null。
+      指定字体的上标状态。 如果区域中的所有字体均为上标，则返回 True。 如果区域的所有字体为下标或普通（既不是上标，也不是下标），则返回 False。 否则返回 Null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: superscript
@@ -141,7 +141,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#tintAndShade:member'
     summary: |-
-      返回或设置一个使区域字体的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。 空值表示整个区域没有统一的字体 tintAndShade 设置。
+      指定将区域字体的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 空值表示整个区域没有统一的字体 tintAndShade 设置。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
