commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.charttrendlinelabelformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.charttrendlinelabelformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatData:interface'
-    summary: <span data-ttu-id="7f4b4-101">描述通过调用返回的数据的接口`chartTrendlineLabelFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="7f4b4-101">An interface describing the data returned by calling `chartTrendlineLabelFormat.toJSON()`</span></span><!-- --><span data-ttu-id="7f4b4-102">.</span><span class="sxs-lookup"><span data-stu-id="7f4b4-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartTrendlineLabelFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartTrendlineLabelFormatData
     fullName: Excel.Interfaces.ChartTrendlineLabelFormatData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.ChartTrendlineLabelFormatData#font:member'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatData#border:member'
     summary: |-
-      <span data-ttu-id="7f4b4-103">表示边框格式，包括颜色、线条样式和粗细。</span><span class="sxs-lookup"><span data-stu-id="7f4b4-103">Represents the border format, which includes color, linestyle, and weight.</span></span>
+      指定边框格式，包括颜色、linestyle 和粗细。
 
-      <span data-ttu-id="7f4b4-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7f4b4-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ChartBorderData:interface'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatData#font:member'
     summary: |-
-      <span data-ttu-id="7f4b4-105">表示图表趋势线标签的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="7f4b4-105">Represents the font attributes (font name, font size, color, etc.) for a chart trendline label.</span></span>
+      指定图表趋势线标签的字体属性（字体名称、字体大小、颜色等）。
 
-      <span data-ttu-id="7f4b4-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7f4b4-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
