--- a/docs/docs-ref-autogen/excel/excel/excel.pivotaxis.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.pivotaxis.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.PivotAxis:enum'
     summary: |-
-      <span data-ttu-id="a950a-101">数据透视字段的 ShowAs 计算函数。</span><span class="sxs-lookup"><span data-stu-id="a950a-101">The ShowAs Calculation function for the Data Pivot Field.</span></span>
+      表示要从其获取 PivotItems 的轴。
 
-      <span data-ttu-id="a950a-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a950a-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.PivotAxis
     fullName: Excel.PivotAxis
     langs:
@@ -18,7 +18,7 @@ items:
       - 'excel!Excel.PivotAxis.row:member'
       - 'excel!Excel.PivotAxis.unknown:member'
   - uid: 'excel!Excel.PivotAxis.column:member'
-    summary: <span data-ttu-id="a950a-103">列轴。</span><span class="sxs-lookup"><span data-stu-id="a950a-103">The column axis.</span></span>
+    summary: 列轴。
     name: column
     fullName: column
     langs:
@@ -26,7 +26,7 @@ items:
     type: field
     numericValue: '"Column"'
   - uid: 'excel!Excel.PivotAxis.data:member'
-    summary: <span data-ttu-id="a950a-104">数据轴。</span><span class="sxs-lookup"><span data-stu-id="a950a-104">The data axis.</span></span>
+    summary: 数据轴。
     name: data
     fullName: data
     langs:
@@ -34,7 +34,7 @@ items:
     type: field
     numericValue: '"Data"'
   - uid: 'excel!Excel.PivotAxis.filter:member'
-    summary: <span data-ttu-id="a950a-105">筛选轴。</span><span class="sxs-lookup"><span data-stu-id="a950a-105">The filter axis.</span></span>
+    summary: 筛选轴。
     name: filter
     fullName: filter
     langs:
@@ -42,7 +42,7 @@ items:
     type: field
     numericValue: '"Filter"'
   - uid: 'excel!Excel.PivotAxis.row:member'
-    summary: <span data-ttu-id="a950a-106">行轴。</span><span class="sxs-lookup"><span data-stu-id="a950a-106">The row axis.</span></span>
+    summary: 行轴。
     name: row
     fullName: row
     langs:
@@ -50,7 +50,7 @@ items:
     type: field
     numericValue: '"Row"'
   - uid: 'excel!Excel.PivotAxis.unknown:member'
-    summary: <span data-ttu-id="a950a-107">坐标轴或区域未知或不受支持。</span><span class="sxs-lookup"><span data-stu-id="a950a-107">The axis or region is unknown or unsupported.</span></span>
+    summary: 坐标轴或区域未知或不受支持。
     name: unknown
     fullName: unknown
     langs:
