--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartbinoptionsdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartbinoptionsdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsData:interface'
-    summary: <span data-ttu-id="6a582-101">描述通过调用返回的数据的接口`chartBinOptions.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="6a582-101">An interface describing the data returned by calling `chartBinOptions.toJSON()`</span></span><!-- --><span data-ttu-id="6a582-102">.</span><span class="sxs-lookup"><span data-stu-id="6a582-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartBinOptions.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartBinOptionsData
     fullName: Excel.Interfaces.ChartBinOptionsData
     langs:
@@ -18,9 +18,9 @@ items:
       - 'excel!Excel.Interfaces.ChartBinOptionsData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsData#allowOverflow:member'
     summary: |-
-      <span data-ttu-id="6a582-103">指定是否在直方图或排列图中启用容器溢出。</span><span class="sxs-lookup"><span data-stu-id="6a582-103">Specifies whether or not the bin overflow is enabled in a histogram chart or pareto chart.</span></span> <span data-ttu-id="6a582-104">读/写。</span><span class="sxs-lookup"><span data-stu-id="6a582-104">Read/Write.</span></span>
+      指定直方图图表或排列图表中是否启用了 "bin 溢出"。
 
-      <span data-ttu-id="6a582-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a582-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowOverflow
     fullName: allowOverflow
     langs:
@@ -33,9 +33,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsData#allowUnderflow:member'
     summary: |-
-      <span data-ttu-id="6a582-106">指定是否在直方图或排列图中启用容器下溢。</span><span class="sxs-lookup"><span data-stu-id="6a582-106">Specifies whether or not the bin underflow is enabled in a histogram chart or pareto chart.</span></span> <span data-ttu-id="6a582-107">读/写。</span><span class="sxs-lookup"><span data-stu-id="6a582-107">Read/Write.</span></span>
+      指定直方图图表或排列图表中是否启用了 bin 下溢。
 
-      <span data-ttu-id="6a582-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a582-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowUnderflow
     fullName: allowUnderflow
     langs:
@@ -48,9 +48,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsData#count:member'
     summary: |-
-      <span data-ttu-id="6a582-109">返回或设置直方图或排列图的容器数量。</span><span class="sxs-lookup"><span data-stu-id="6a582-109">Returns or sets the bin count of a histogram chart or pareto chart.</span></span> <span data-ttu-id="6a582-110">读/写。</span><span class="sxs-lookup"><span data-stu-id="6a582-110">Read/Write.</span></span>
+      指定直方图图表或排列图表的分类数。
 
-      <span data-ttu-id="6a582-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a582-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: count
     fullName: count
     langs:
@@ -63,9 +63,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsData#overflowValue:member'
     summary: |-
-      <span data-ttu-id="6a582-112">返回或设置直方图或排列图的容器溢出值。</span><span class="sxs-lookup"><span data-stu-id="6a582-112">Returns or sets the bin overflow value of a histogram chart or pareto chart.</span></span> <span data-ttu-id="6a582-113">读/写。</span><span class="sxs-lookup"><span data-stu-id="6a582-113">Read/Write.</span></span>
+      指定直方图图表或排列图表的 "bin 溢出" 值。
 
-      <span data-ttu-id="6a582-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a582-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overflowValue
     fullName: overflowValue
     langs:
@@ -78,9 +78,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsData#type:member'
     summary: |-
-      <span data-ttu-id="6a582-115">返回或设置直方图或排列图的容器类型。</span><span class="sxs-lookup"><span data-stu-id="6a582-115">Returns or sets the bin's type for a histogram chart or pareto chart.</span></span> <span data-ttu-id="6a582-116">读/写。</span><span class="sxs-lookup"><span data-stu-id="6a582-116">Read/Write.</span></span>
+      指定用于直方图图表或排列图表的 bin 类型。
 
-      <span data-ttu-id="6a582-117">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a582-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -93,9 +93,9 @@ items:
           - 'excel!Excel.Interfaces.ChartBinOptionsData#type~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsData#underflowValue:member'
     summary: |-
-      <span data-ttu-id="6a582-118">返回或设置直方图或排列图的容器下溢值。</span><span class="sxs-lookup"><span data-stu-id="6a582-118">Returns or sets the bin underflow value of a histogram chart or pareto chart.</span></span> <span data-ttu-id="6a582-119">读/写。</span><span class="sxs-lookup"><span data-stu-id="6a582-119">Read/Write.</span></span>
+      指定直方图图表或排列图表的 bin 下溢值。
 
-      <span data-ttu-id="6a582-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a582-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underflowValue
     fullName: underflowValue
     langs:
@@ -108,9 +108,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsData#width:member'
     summary: |-
-      <span data-ttu-id="6a582-121">返回或设置直方图或排列图的容器宽度值。</span><span class="sxs-lookup"><span data-stu-id="6a582-121">Returns or sets the bin width value of a histogram chart or pareto chart.</span></span> <span data-ttu-id="6a582-122">读/写。</span><span class="sxs-lookup"><span data-stu-id="6a582-122">Read/Write.</span></span>
+      指定直方图图表或排列图表的纸盒宽度值。
 
-      <span data-ttu-id="6a582-123">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a582-123">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
