--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartgridlinesdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartgridlinesdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartGridlinesData:interface'
-    summary: <span data-ttu-id="845bd-101">描述通过调用返回的数据的接口`chartGridlines.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="845bd-101">An interface describing the data returned by calling `chartGridlines.toJSON()`</span></span><!-- --><span data-ttu-id="845bd-102">.</span><span class="sxs-lookup"><span data-stu-id="845bd-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartGridlines.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartGridlinesData
     fullName: Excel.Interfaces.ChartGridlinesData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.ChartGridlinesData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartGridlinesData#format:member'
     summary: |-
-      <span data-ttu-id="845bd-103">表示图表网格线的格式。</span><span class="sxs-lookup"><span data-stu-id="845bd-103">Represents the formatting of chart gridlines.</span></span> <span data-ttu-id="845bd-104">只读。</span><span class="sxs-lookup"><span data-stu-id="845bd-104">Read-only.</span></span>
+      表示图表网格线的格式。
 
-      <span data-ttu-id="845bd-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="845bd-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ChartGridlinesFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartGridlinesData#visible:member'
     summary: |-
-      <span data-ttu-id="845bd-106">表示坐标轴网格线是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="845bd-106">Boolean value representing if the axis gridlines are visible or not.</span></span>
+      指定轴网格线是否可见。
 
-      <span data-ttu-id="845bd-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="845bd-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
