--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.charttrendlineformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.charttrendlineformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartTrendlineFormatData:interface'
-    summary: <span data-ttu-id="ec1c6-101">描述通过调用返回的数据的接口`chartTrendlineFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="ec1c6-101">An interface describing the data returned by calling `chartTrendlineFormat.toJSON()`</span></span><!-- --><span data-ttu-id="ec1c6-102">.</span><span class="sxs-lookup"><span data-stu-id="ec1c6-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartTrendlineFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartTrendlineFormatData
     fullName: Excel.Interfaces.ChartTrendlineFormatData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ChartTrendlineFormatData#line:member'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineFormatData#line:member'
     summary: |-
-      <span data-ttu-id="ec1c6-103">表示图表线条格式。</span><span class="sxs-lookup"><span data-stu-id="ec1c6-103">Represents chart line formatting.</span></span> <span data-ttu-id="ec1c6-104">只读。</span><span class="sxs-lookup"><span data-stu-id="ec1c6-104">Read-only.</span></span>
+      表示图表线条格式。
 
-      <span data-ttu-id="ec1c6-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ec1c6-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: line
     fullName: line
     langs:
