--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.geometricshapeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.geometricshapeloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.GeometricShapeLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="cf5ee-101">代表工作表中的几何形状。</span><span class="sxs-lookup"><span data-stu-id="cf5ee-101">Represents a geometric shape inside a worksheet.</span></span> <span data-ttu-id="cf5ee-102">在 Excel 中，几何形状可以是矩形、箭头总汇、公式符号、流程图项、星形、横幅、标注或任何其他基本形状。</span><span class="sxs-lookup"><span data-stu-id="cf5ee-102">A geometric shape can be a rectangle, block arrow, equation symbol, flowchart item, star, banner, callout, or any other basic shape in Excel.</span></span>
+      代表工作表中的几何形状。 在 Excel 中，几何形状可以是矩形、箭头总汇、公式符号、流程图项、星形、横幅、标注或任何其他基本形状。
 
-      <span data-ttu-id="cf5ee-103">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf5ee-103">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.GeometricShapeLoadOptions
     fullName: Excel.Interfaces.GeometricShapeLoadOptions
     langs:
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.GeometricShapeLoadOptions#id:member'
       - 'excel!Excel.Interfaces.GeometricShapeLoadOptions#shape:member'
   - uid: 'excel!Excel.Interfaces.GeometricShapeLoadOptions#$all:member'
-    summary: '<span data-ttu-id="cf5ee-104">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="cf5ee-104">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="cf5ee-105">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="cf5ee-105">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="cf5ee-106">).</span><span class="sxs-lookup"><span data-stu-id="cf5ee-106"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.GeometricShapeLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="cf5ee-107">返回形状标识符。</span><span class="sxs-lookup"><span data-stu-id="cf5ee-107">Returns the shape identifier.</span></span> <span data-ttu-id="cf5ee-108">只读。</span><span class="sxs-lookup"><span data-stu-id="cf5ee-108">Read-only.</span></span>
+      返回形状标识符。
 
-      <span data-ttu-id="cf5ee-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf5ee-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -44,9 +44,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.GeometricShapeLoadOptions#shape:member'
     summary: |-
-      <span data-ttu-id="cf5ee-110">返回几何形状的形状对象。</span><span class="sxs-lookup"><span data-stu-id="cf5ee-110">Returns the Shape object for the geometric shape.</span></span>
+      返回几何形状的形状对象。
 
-      <span data-ttu-id="cf5ee-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cf5ee-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shape
     fullName: shape
     langs:
