--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.headerfooterupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.headerfooterupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData:interface'
-    summary: '<span data-ttu-id="f026c-101">一个用于更新 HeaderFooter 对象上的数据的接口，可用于`headerFooter.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="f026c-101">An interface for updating data on the HeaderFooter object, for use in `headerFooter.set({ ... })`</span></span><!-- --><span data-ttu-id="f026c-102">.</span><span class="sxs-lookup"><span data-stu-id="f026c-102"></span></span>'
+    summary: '一个用于更新 HeaderFooter 对象上的数据的接口，可用于`headerFooter.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.HeaderFooterUpdateData
     fullName: Excel.Interfaces.HeaderFooterUpdateData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.Interfaces.HeaderFooterUpdateData#rightHeader:member'
   - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData#centerFooter:member'
     summary: |-
-      <span data-ttu-id="f026c-103">获取或设置工作表的中心页脚。</span><span class="sxs-lookup"><span data-stu-id="f026c-103">Gets or sets the center footer of the worksheet.</span></span> <span data-ttu-id="f026c-104">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="f026c-104">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的中心页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="f026c-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f026c-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: centerFooter
     fullName: centerFooter
     langs:
@@ -32,9 +32,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData#centerHeader:member'
     summary: |-
-      <span data-ttu-id="f026c-106">获取或设置工作表的中心页眉。</span><span class="sxs-lookup"><span data-stu-id="f026c-106">Gets or sets the center header of the worksheet.</span></span> <span data-ttu-id="f026c-107">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="f026c-107">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的中间标头。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="f026c-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f026c-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: centerHeader
     fullName: centerHeader
     langs:
@@ -47,9 +47,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData#leftFooter:member'
     summary: |-
-      <span data-ttu-id="f026c-109">获取或设置工作表的左侧页脚。</span><span class="sxs-lookup"><span data-stu-id="f026c-109">Gets or sets the left footer of the worksheet.</span></span> <span data-ttu-id="f026c-110">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="f026c-110">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的左页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="f026c-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f026c-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: leftFooter
     fullName: leftFooter
     langs:
@@ -62,9 +62,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData#leftHeader:member'
     summary: |-
-      <span data-ttu-id="f026c-112">获取或设置工作表的左侧页眉。</span><span class="sxs-lookup"><span data-stu-id="f026c-112">Gets or sets the left header of the worksheet.</span></span> <span data-ttu-id="f026c-113">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="f026c-113">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的左页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="f026c-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f026c-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: leftHeader
     fullName: leftHeader
     langs:
@@ -77,9 +77,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData#rightFooter:member'
     summary: |-
-      <span data-ttu-id="f026c-115">获取或设置工作表的右侧页脚。</span><span class="sxs-lookup"><span data-stu-id="f026c-115">Gets or sets the right footer of the worksheet.</span></span> <span data-ttu-id="f026c-116">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="f026c-116">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的右页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="f026c-117">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f026c-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rightFooter
     fullName: rightFooter
     langs:
@@ -92,9 +92,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData#rightHeader:member'
     summary: |-
-      <span data-ttu-id="f026c-118">获取或设置工作表的右侧页眉。</span><span class="sxs-lookup"><span data-stu-id="f026c-118">Gets or sets the right header of the worksheet.</span></span> <span data-ttu-id="f026c-119">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="f026c-119">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的右侧标头。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="f026c-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f026c-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rightHeader
     fullName: rightHeader
     langs:
