--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.iterativecalculationupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.iterativecalculationupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.IterativeCalculationUpdateData:interface'
-    summary: '<span data-ttu-id="c5369-101">一个用于更新 IterativeCalculation 对象上的数据的接口，可用于`iterativeCalculation.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="c5369-101">An interface for updating data on the IterativeCalculation object, for use in `iterativeCalculation.set({ ... })`</span></span><!-- --><span data-ttu-id="c5369-102">.</span><span class="sxs-lookup"><span data-stu-id="c5369-102"></span></span>'
+    summary: '一个用于更新 IterativeCalculation 对象上的数据的接口，可用于`iterativeCalculation.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.IterativeCalculationUpdateData
     fullName: Excel.Interfaces.IterativeCalculationUpdateData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.IterativeCalculationUpdateData#maxIteration:member'
   - uid: 'excel!Excel.Interfaces.IterativeCalculationUpdateData#enabled:member'
     summary: |-
-      <span data-ttu-id="c5369-103">如果 Excel 使用迭代来处理循环引用，则为 True。</span><span class="sxs-lookup"><span data-stu-id="c5369-103">True if Excel will use iteration to resolve circular references.</span></span>
+      如果 Excel 使用迭代来处理循环引用，则为 True。
 
-      <span data-ttu-id="c5369-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5369-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enabled
     fullName: enabled
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.IterativeCalculationUpdateData#maxChange:member'
     summary: |-
-      <span data-ttu-id="c5369-105">返回或设置 Excel 处理循环引用时迭代之间的最大变化值。</span><span class="sxs-lookup"><span data-stu-id="c5369-105">Returns or sets the maximum amount of change between each iteration as Excel resolves circular references.</span></span>
+      指定在 Excel 解析循环引用时，每次迭代之间的最大更改量。
 
-      <span data-ttu-id="c5369-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5369-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: maxChange
     fullName: maxChange
     langs:
@@ -44,9 +44,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.IterativeCalculationUpdateData#maxIteration:member'
     summary: |-
-      <span data-ttu-id="c5369-107">返回或设置 Excel 处理循环引用的最大迭代次数。</span><span class="sxs-lookup"><span data-stu-id="c5369-107">Returns or sets the maximum number of iterations that Excel can use to resolve a circular reference.</span></span>
+      指定 Excel 可用于解析循环引用的最大迭代次数。
 
-      <span data-ttu-id="c5369-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5369-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: maxIteration
     fullName: maxIteration
     langs:
