--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangefontdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangefontdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeFontData:interface'
-    summary: <span data-ttu-id="a00a5-101">描述通过调用返回的数据的接口`rangeFont.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="a00a5-101">An interface describing the data returned by calling `rangeFont.toJSON()`</span></span><!-- --><span data-ttu-id="a00a5-102">.</span><span class="sxs-lookup"><span data-stu-id="a00a5-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`rangeFont.toJSON()`<!-- -->.
     name: Excel.Interfaces.RangeFontData
     fullName: Excel.Interfaces.RangeFontData
     langs:
@@ -21,9 +21,9 @@ items:
       - 'excel!Excel.Interfaces.RangeFontData#underline:member'
   - uid: 'excel!Excel.Interfaces.RangeFontData#bold:member'
     summary: |-
-      <span data-ttu-id="a00a5-103">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="a00a5-103">Represents the bold status of font.</span></span>
+      表示字体的加粗状态。
 
-      <span data-ttu-id="a00a5-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a00a5-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bold
     fullName: bold
     langs:
@@ -36,9 +36,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontData#color:member'
     summary: |-
-      <span data-ttu-id="a00a5-105">文本颜色的 HTML 颜色代码表示。</span><span class="sxs-lookup"><span data-stu-id="a00a5-105">HTML color code representation of the text color.</span></span> <span data-ttu-id="a00a5-106">例如，</span><span class="sxs-lookup"><span data-stu-id="a00a5-106">E.g.</span></span> <span data-ttu-id="a00a5-107">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="a00a5-107">\#FF0000 represents Red.</span></span>
+      文本颜色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
-      <span data-ttu-id="a00a5-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a00a5-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -51,9 +51,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeFontData#italic:member'
     summary: |-
-      <span data-ttu-id="a00a5-109">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="a00a5-109">Represents the italic status of the font.</span></span>
+      指定字体的斜体状态。
 
-      <span data-ttu-id="a00a5-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a00a5-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: italic
     fullName: italic
     langs:
@@ -66,9 +66,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontData#name:member'
     summary: |-
-      <span data-ttu-id="a00a5-111">字体名称（例如"Calibri"）</span><span class="sxs-lookup"><span data-stu-id="a00a5-111">Font name (e.g. "Calibri")</span></span>
+      字体名称（例如，"Calibri"）
 
-      <span data-ttu-id="a00a5-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a00a5-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -81,9 +81,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeFontData#size:member'
     summary: |-
-      <span data-ttu-id="a00a5-113">字号</span><span class="sxs-lookup"><span data-stu-id="a00a5-113">Font size.</span></span>
+      字号
 
-      <span data-ttu-id="a00a5-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a00a5-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: size
     fullName: size
     langs:
@@ -96,9 +96,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFontData#strikethrough:member'
     summary: |-
-      <span data-ttu-id="a00a5-115">表示字体的删除线状态。</span><span class="sxs-lookup"><span data-stu-id="a00a5-115">Represents the strikethrough status of font.</span></span> <span data-ttu-id="a00a5-116">Null 值表示整个区域没有统一的删除线设置。</span><span class="sxs-lookup"><span data-stu-id="a00a5-116">A null value indicates that the entire range doesn't have uniform Strikethrough setting.</span></span>
+      指定字体的删除线状态。 Null 值表示整个区域没有统一的删除线设置。
 
-      <span data-ttu-id="a00a5-117">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a00a5-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: strikethrough
     fullName: strikethrough
     langs:
@@ -111,9 +111,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontData#subscript:member'
     summary: |-
-      <span data-ttu-id="a00a5-118">表示字体的下标状态。</span><span class="sxs-lookup"><span data-stu-id="a00a5-118">Represents the Subscript status of font.</span></span> <span data-ttu-id="a00a5-119">如果区域中的所有字体均为下标，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="a00a5-119">Returns True if all the fonts of the range are Subscript.</span></span> <span data-ttu-id="a00a5-120">如果区域的所有字体都是上标或 normal （既不是上标，也不是下标），则返回 False。</span><span class="sxs-lookup"><span data-stu-id="a00a5-120">Returns False if all the fonts of the range are Superscript or normal (neither Superscript, nor Subscript).</span></span> <span data-ttu-id="a00a5-121">否则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="a00a5-121">Returns Null otherwise.</span></span>
+      指定字体的下标状态。 如果区域中的所有字体均为下标，则返回 True。 如果区域的所有字体都是上标或 normal （既不是上标，也不是下标），则返回 False。 否则返回 Null。
 
-      <span data-ttu-id="a00a5-122">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a00a5-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: subscript
     fullName: subscript
     langs:
@@ -126,9 +126,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontData#superscript:member'
     summary: |-
-      <span data-ttu-id="a00a5-123">表示字体的上标状态。</span><span class="sxs-lookup"><span data-stu-id="a00a5-123">Represents the Superscript status of font.</span></span> <span data-ttu-id="a00a5-124">如果区域中的所有字体均为上标，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="a00a5-124">Returns True if all the fonts of the range are Superscript.</span></span> <span data-ttu-id="a00a5-125">如果区域的所有字体为下标或普通（既不是上标，也不是下标），则返回 False。</span><span class="sxs-lookup"><span data-stu-id="a00a5-125">Returns False if all the fonts of the range are Subscript or normal (neither Superscript, nor Subscript).</span></span> <span data-ttu-id="a00a5-126">否则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="a00a5-126">Returns Null otherwise.</span></span>
+      指定字体的上标状态。 如果区域中的所有字体均为上标，则返回 True。 如果区域的所有字体为下标或普通（既不是上标，也不是下标），则返回 False。 否则返回 Null。
 
-      <span data-ttu-id="a00a5-127">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a00a5-127">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: superscript
     fullName: superscript
     langs:
@@ -141,9 +141,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontData#tintAndShade:member'
     summary: |-
-      <span data-ttu-id="a00a5-128">返回或设置一个使区域字体的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。</span><span class="sxs-lookup"><span data-stu-id="a00a5-128">Returns or sets a double that lightens or darkens a color for Range Font, the value is between -1 (darkest) and 1 (brightest), with 0 for the original color.</span></span> <span data-ttu-id="a00a5-129">空值表示整个区域没有统一的字体 tintAndShade 设置。</span><span class="sxs-lookup"><span data-stu-id="a00a5-129">A null value indicates that the entire range doesn't have uniform font tintAndShade setting.</span></span>
+      指定将区域字体的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 空值表示整个区域没有统一的字体 tintAndShade 设置。
 
-      <span data-ttu-id="a00a5-130">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a00a5-130">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
     fullName: tintAndShade
     langs:
@@ -156,9 +156,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFontData#underline:member'
     summary: |-
-      <span data-ttu-id="a00a5-131">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="a00a5-131">Type of underline applied to the font.</span></span> <span data-ttu-id="a00a5-132">有关详细信息，请参阅 RangeUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="a00a5-132">See Excel.RangeUnderlineStyle for details.</span></span>
+      应用于字体的下划线类型。 有关详细信息，请参阅 RangeUnderlineStyle。
 
-      <span data-ttu-id="a00a5-133">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a00a5-133">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underline
     fullName: underline
     langs:
